--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,5 @@
 WEATHER_API_KEY=your_api_key_here
 WEATHER_API_URL=https://api.weatherapi.com/v1
+PORT=3000
+DATABASE_URL="mysql://root:password@localhost:3306/weather"
+JWT_SECRET=weather-wise-api-2025
