--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,5 @@ WEATHER_API_URL=https://api.weatherapi.com/v1
 PORT=3000
 DATABASE_URL="mysql://root:password@localhost:3306/weather"
 JWT_SECRET=weather-wise-api-2025
+QUEUE_HOST=localhost
+REDIS_PORT=6379
